Upgrade to Gradle 9
- fix deprecated and removed apis